--- a/algoprog/matplotlib_gen/figures.ipynb
+++ b/algoprog/matplotlib_gen/figures.ipynb
@@ -741,10 +741,10 @@
     "u_vals = 10 - 50 * i_vals                  # Tensions en V\n",
     "\n",
     "# Création de la figure (on retire sharey=True pour voir les ordonnées à droite)\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(9, 3))\n",
     "\n",
     "# --- Graphique A : Représentation Simplifiée ---\n",
-    "ax1.plot(i_vals * 1e3, u_vals, 'ro', markersize=6, label=\"Points de mesure ($U_i, I_i$)\")\n",
+    "ax1.plot(i_vals * 1e3, u_vals, 'r.', markersize=6, label=\"Points de mesure ($U_i, I_i$)\")\n",
     "ax1.plot([0, 12], [10, 10 - 50 * 0.012], color='steelblue', linewidth=2, label=\"Modèle $U = 10 - 50I$\")\n",
     "ax1.set_title(\"Représentation idéalisée\")\n",
     "ax1.legend(loc='upper right')\n",
@@ -758,8 +758,8 @@
     "\n",
     "# Ajout des Nuages d'Incertitude (Ellipses rouges variables)\n",
     "for idx, (ii, uu) in enumerate(zip(i_vals * 1e3, u_vals)):\n",
-    "    v_width = np.random.uniform(0.2, 0.4)\n",
-    "    v_height = np.random.uniform(0.05, 0.1)\n",
+    "    v_width = np.random.uniform(0.3, 0.5)\n",
+    "    v_height = np.random.uniform(0.08, 0.12)\n",
     "    \n",
     "    label_e = \"Nuage de mesure ($U_i, I_i$)\" if idx == 0 else \"\"\n",
     "    ellipse = Ellipse((ii, uu), width=v_width, height=v_height, angle=0, \n",
@@ -772,10 +772,8 @@
     "    i_coords = np.array([0, 12])\n",
     "    u_coords = e_v - r_v * ((i_coords - 6) * 1e-3)\n",
     "    # On met un label uniquement pour la première droite pour la légende\n",
-    "    label_m = \"Modèles\" if idx == 0 else \"\"\n",
+    "    label_m = \"Modèles raisonnables\" if idx == 0 else \"\"\n",
     "    ax2.plot(i_coords, u_coords, color='steelblue', alpha=0.3, linewidth=1, label=label_m)\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "ax2.set_title(\"Représentation réaliste\")\n",
@@ -793,7 +791,7 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(\"representation_reelle.svg\") # Enregistrement de la figure au format SVG\n",
+    "plt.savefig(\"points_vs_nuages.svg\") # Enregistrement de la figure au format SVG\n",
     "plt.show()"
    ]
   },
